[package]
name = "nimue"
version = "0.0.1-beta4"
authors = ["Michele Orrù <michele@tumbolandia.net>"]
description = "A library for Fiat-Shamir transcripts."
edition = "2021"
license = "MIT/Apache-2.0"
resolver = "2"

[patch.crates-io]
ark-std = {git = "https://github.com/arkworks-rs/utils"}
ark-ec = {git = "https://github.com/arkworks-rs/algebra"}
ark-ff = {git = "https://github.com/arkworks-rs/algebra"}
ark-serialize = {git = "https://github.com/arkworks-rs/algebra"}
ark-serialize-derive = {git = "https://github.com/arkworks-rs/algebra"}
ark-bls12-381 = {git = "https://github.com/arkworks-rs/algebra"}

[dependencies]
zeroize = {version="1.6.0", features=["zeroize_derive"]}
rand = {version="0.8.5", features=["getrandom"]}
digest = "0.10.7"
generic-array = "0.14.7"
# used as default hasher for the prover
keccak = "0.1.4"
log = "0.4.20"
# optional dependencies
ark-ff = {version="0.4.0", optional=true}
ark-ec = {version="0.4.0", optional=true}
ark-serialize = {version="0.4.2", optional=true}
ark-crypto-primitives = {version="0.4.0", optional=true}
curve25519-dalek = {version="4.0.0", optional=true, features=["group"]}
# anemoi = {git = "https://github.com/anemoi-hash/anemoi-rust", optional=true}
group = {version="0.13.0", optional=true}

[features]
default = []
ark = ["dep:ark-ff", "dep:ark-ec", "dep:ark-serialize", "dep:ark-crypto-primitives"]
group = ["dep:group", "dep:curve25519-dalek"]
# anemoi = ["dep:anemoi"]

[dev-dependencies]
ark-std = "0.4.0"
sha2 = "0.10.7"
blake2 = "0.10.6"
ark-curve25519 = "0.4.0"
hex = "0.4.3"
anyhow = { version = "1.0.75", features = ["backtrace"] }


[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header", "doc/katex-header.html",
    "--cfg", "docsrs",
]
features = ["ark", "group"]

[[example]]
name = "schnorr"
required-features = ["ark"]

[[example]]
name = "bulletproof"
required-features = ["ark"]
