[workspace]
resolver = "2"

members = [
    "spongefish",
    "spongefish-pow",
    "spongefish-anemoi",
    "spongefish-poseidon",
]

[workspace.dependencies]
anemoi = { git = "https://github.com/mmaker/anemoi" }
anyhow = "1.0.75"
ark-bls12-381 = "0.5"
ark-bn254 = "0.5"
ark-curve25519 = "0.5.0"
ark-ec = "0.5"
ark-ff = "0.5"
ark-pallas = "0.5"
ark-serialize = "0.5"
ark-std = "0.5.0"
ark-vesta = "0.5"
arrayvec = "0.7.6"
blake2 = "0.10.6"
blake3 = "1.5.4"
bls12_381 = "0.8.0"
bytemuck = "1.17.1"
curve25519-dalek = "4.0.0"
digest = "0.10.7"
group = "0.13.0"
hex = "0.4.3"
keccak = "0.1.4"
log = "0.4.20"
spongefish = { path = "spongefish" }
pallas = "0.31"
pasta_curves = "0.5.1"
rand = "0.8.5"
rayon = "1.10.0"
sha2 = "0.10.7"
sha3 = "0.10.8"
zeroize = "1.8.1"


# Un-comment below for latest arkworks libraries.
# [patch.crates-io]
# ark-std = { git = "https://github.com/arkworks-rs/utils" }
# ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
# ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
# ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
# ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra" }
# ark-curve25519 = { git = "https://github.com/arkworks-rs/algebra" }
# ark-pallas = { git = "https://github.com/arkworks-rs/algebra" }
# ark-vesta = { git = "https://github.com/arkworks-rs/algebra" }
