[package]
name = "nimue-anemoi"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
ark-ff = "^0.4.2"
nimue = { path = "../nimue", features = ["ark"] }
zeroize = "1.8.1"
anemoi = {git = "https://github.com/mmaker/anemoi", features=["bls12_381"]}
ark-bls12-381 = "^0.4.0"
arrayvec = "0.7.6"
