[package]
name = "nimue-poseidon"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
nimue = { workspace = true, features = ["ark"] }
ark-ff = { workspace = true }
zeroize = { workspace = true }
ark-bls12-381 = { workspace = true, optional = true }
ark-bn254 = { workspace = true, optional = true }

[dev-dependencies]
ark-bls12-381 = { workspace = true }

[features]
bn254 = ["ark-bn254"]
solinas = []
bls12-381 = ["nimue/ark", "dep:ark-bls12-381"]

[[example]]
name = "schnorr_algebraic_hash"
required-features = ["ark-bls12-381"]
