[package]
name = "nimue-pow"
version = "0.1.0"
edition = "2021"
authors = [
    "Giacomo Fenzi <giacomofenzi@outlook.com>",
    "Remco Bloemen <remco@wicked.ventures>"
]
license = "BSD-3-Clause"

[dependencies]
nimue = { workspace = true }
blake3 = { workspace = true }
keccak = { workspace = true }
bytemuck = { workspace = true }
rayon = { workspace = true, optional = true }
rand = { workspace = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
