[package]
name = "nimue"
version = "0.2.0"
authors = ["Michele Orrù <m@orru.net>"]
description = "A library for Fiat-Shamir transcripts."
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
zeroize = { workspace = true, features = ["zeroize_derive"] }
rand = { workspace = true, features = ["getrandom"] }
digest = { workspace = true }
# used as default hasher for the prover
keccak = { workspace = true }
log = { workspace = true }
# optional dependencies
ark-ff = { workspace = true, optional = true }
ark-ec = { workspace = true, optional = true }
ark-serialize = { workspace = true, features = ["std"], optional = true }
group = { workspace = true, optional = true }
hex = { workspace = true }

[features]
default = []
ark = ["dep:ark-ff", "dep:ark-ec", "dep:ark-serialize"]
group = ["dep:group"]
asm = ["keccak/asm", "keccak/simd"]

[dev-dependencies]
ark-std = { workspace = true }
sha2 = { workspace = true }
blake2 = { workspace = true }
hex = { workspace = true }
# test curve25519 compatibility
curve25519-dalek = { workspace = true, features = ["group"] }
ark-curve25519 = { workspace = true }
# test algebraic hashers
bls12_381 = { workspace = true }
ark-bls12-381 = { workspace = true, features = ["std"] }
anyhow = { workspace = true, features = ["backtrace"] }
ark-pallas = { workspace = true, features = ["std"] }
pallas = { workspace = true }
pasta_curves = { workspace = true }
ark-vesta = { workspace = true, features = ["std"] }
sha3 = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "../doc/katex-header.html", "--cfg", "docsrs"]
features = ["ark", "group"]

[[example]]
name = "schnorr"
required-features = ["ark"]

[[example]]
name = "bulletproof"
required-features = ["ark"]

[lints.clippy]
too_long_first_doc_paragraph = "allow"
doc_lazy_continuation = "allow"
