[package]
name = "spongefish-anemoi"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
ark-ff = { workspace = true }
spongefish = { workspace = true, features = ["arkworks-algebra"] }
zeroize = { workspace = true }
anemoi = { workspace = true, features = ["bls12_381"] }
ark-bls12-381 = { workspace = true }
arrayvec = { workspace = true }
