[package]
name = "spongefish-poseidon"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
spongefish = { workspace = true, features = ["arkworks-algebra"] }
ark-ff = { workspace = true }
zeroize = { workspace = true }
ark-bls12-381 = { workspace = true, optional = true }
ark-bn254 = { workspace = true, optional = true }

[dev-dependencies]
ark-bls12-381 = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
hex = { workspace = true }
blake2 = { workspace = true }

[features]
bn254 = ["ark-bn254"]
solinas = []
bls12-381 = ["spongefish/arkworks-algebra", "dep:ark-bls12-381"]
ark-bls12-381 = ["spongefish/arkworks-algebra", "dep:ark-bls12-381"]

[[example]]
name = "schnorr_algebraic_hash"
required-features = ["ark-bls12-381"]
